# atmega328-scheduler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-all.sh
.github/workflows/: c-cpp.yml
include/kernel/: errno.h  event.h  kernel.h  task.h
include/kernel/drivers/data_types/: intrusive_slinked_list.h  sorted_fifo_ptr.h
include/kernel/drivers/gpio/: gpio.h
include/kernel/drivers/ipc/: ipc_fifo.h
include/kernel/drivers/scheduling/: sched.h
include/kernel/drivers/synchronization/: atomic.h  mutex.h
include/kernel/drivers/uart/: uart.h
lib/AVR-UART-LIB/: CMakeLists.txt
lib/singly_linked_list/: CMakeLists.txt  singly_linked_list.h
src/: CMakeLists.txt  context_switch.cpp  context_switch.h  cpu.h  event.cpp  event_priv.h  kernel.cpp  kernel.h  main.c  main.cpp  scheduler.cpp  scheduler.h  task.cpp  task.h  task_utils.cpp  task_utils.h
src/drivers/clock/: CMakeLists.txt  README.md  clock.cpp  clock.h
src/drivers/data_types/: fifo.h
src/drivers/gpio/: gpio.c  gpio.cpp  gpio.h
src/drivers/ipc/: ipc_fifo.cpp  ipc_fifo.h
src/drivers/scheduling/: sched.cpp  sched.h
src/drivers/synchronization/: atomic.h  mutex.cpp  mutex.h
src/drivers/timer/: CMakeLists.txt  timer.cpp  timer.h
src/drivers/uart/: CMakeLists.txt  uart.cpp  uart.h
src/kernel/: context_switch.cpp  cpu.h  task.h
submodules/: CMakeLists.txt
test/: CMakeLists.txt  Makefile  README.MD  test-uart-output.c  test-uart-output.cpp  test-uart.cpp
test/avr/: CMakeLists.txt  clock-interrupt.cpp  context-switch.cpp  cpu-register-read.cpp  fifo.cpp  get-us-stability.cpp  intrusive-slinked-list.cpp  mutex.cpp  sorted-fifo-ptr.cpp  sram-read.cpp  two-tasks-gpio.cpp  uart-output.cpp  variadic-create-task.cpp
test/avr/tools/: CMakeLists.txt  unittest.cpp  unittest.h
test/native_test_runners/: CMakeLists.txt  test-clock-interrupt.c  test-context-save.c  test-context-switch.c  test-cpu-register-read.c  test-fifo.c  test-get-us-stability.c  test-intrusive-slinked-list.c  test-mutex.c  test-sorted-fifo-ptr.c  test-sram-read.c  test-two-tasks-gpio.c  test-uart-output.c  test-variadic-create-task.c
test/native_test_runners/tools/: CMakeLists.txt  cpu.c  cpu.h  debug.c  debug.h  elf.c  elf.h  math.c  math.h  test.c  test.h
test/tools/: CMakeLists.txt  test.c  test.h
